[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Resources/Images/GitHub-Logo.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -339.0
margin_right = 293.0
margin_bottom = -10.0

[node name="Multiplayer" type="RichTextLabel" parent="Menu"]
margin_right = 283.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
text = "Multiplayer"
fit_content_height = true
scroll_active = false

[node name="Join Online" type="Button" parent="Menu"]
margin_top = 19.0
margin_right = 283.0
margin_bottom = 39.0
text = "Join Online"

[node name="Singleplayer" type="RichTextLabel" parent="Menu"]
margin_top = 43.0
margin_right = 283.0
margin_bottom = 58.0
rect_min_size = Vector2( 80, 0 )
text = "Singleplayer"
fit_content_height = true
scroll_active = false

[node name="New Game" type="Button" parent="Menu"]
margin_top = 62.0
margin_right = 283.0
margin_bottom = 82.0
text = "New Game"

[node name="Load Game" type="Button" parent="Menu"]
margin_top = 86.0
margin_right = 283.0
margin_bottom = 106.0
text = "Load Game"

[node name="Settings" type="Button" parent="Menu"]
margin_top = 110.0
margin_right = 283.0
margin_bottom = 130.0
text = "Settings"

[node name="Exit Game" type="Button" parent="Menu"]
margin_top = 134.0
margin_right = 283.0
margin_bottom = 154.0
text = "Exit Game"

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -95.0
margin_right = -15.0
margin_bottom = -15.0
texture_normal = ExtResource( 2 )
expand = true

[connection signal="pressed" from="Menu/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Menu/Exit Game" to="." method="_on_Exit_Game_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
